# nala

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  README.rst  apt_2.9.6_amd64.deb  build.rs  justfile  nala-cli.py  nala-pyinstall.sh  nala.conf  pyproject.toml
debian/: changelog  control  nala.conf  rules
docs/: nala-autoremove.8.md  nala-backup.8.rst  nala-clean.8.md  nala-clean.8.rst  nala-fetch.8.md  nala-history.8.md  nala-install.8.md  nala-list.8.md  nala-remove.8.md  nala-search.8.md  nala-show.8.md  nala-update.8.md  nala-upgrade.8.md  nala.8.md  nala_autoremove_autopurge.md  nala_autoremove_autopurge_doctave.md
nala/: __init__.py  __main__.py  bootstrap.py  bundle.py  columnar.py  constants.py  downloader.py  dpkg.py  fetch.py  install.py  nala.py  options.py  progress.py  repo.py  rich.py  search.py  utils.py
po/: de.po  es.po  ga.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po  zh_CN.po
src/: clean.rs  cli.rs  colors.rs  config.rs  debfile.rs  downloader.rs  dpkg.rs  fetch.rs  fs.rs  glob.rs  hashsum.rs  history.rs  install.rs  list.rs  main.rs  newdownload.rs  show.rs  summary.rs  table.rs  tui.rs  update.rs  upgrade.rs  util.rs
src/cli/: mod.rs  parser.rs
src/cmd/: fetch.rs  history.rs  install.rs  list.rs  mod.rs  show.rs  traits.rs  update.rs  upgrade.rs
src/config/: color.rs  configuration.rs  logger.rs  mod.rs  paths.rs
src/deb/: compress.rs  debfile.rs  mod.rs  reader.rs
src/download/: downloader.rs  mod.rs  proxy.rs  uri.rs
src/libnala/: mod.rs
src/tui/: fetch.rs  mod.rs  progress.rs  summary.rs
