[package]
name = "nala"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/volian/nala/-/tree/nala-rs"
readme = "README.rst"
description = "Commandline frontend for the APT package manager"

[dependencies]
# rust-apt = { git = "https://gitlab.com/volian/rust-apt" }
rust-apt = { path = "../rust-apt" }
#rust-apt = "0.8.0"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
regex = "1.10"
globset = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
indicatif = "0.17.8"
crossterm = "0.27.0"
sha2 = "0.10.8"
digest = "0.10.7"
chrono = "0.4.38"
ratatui = { version = "0.27.0", features = ["serde"] }
ansi-to-tui = { git = "https://github.com/uttarayan21/ansi-to-tui"}
nix = { version = "0.29.0", features = ["fs", "process", "term", "ioctl", "signal"] }
mio = { version = "1.0.1", features = ["os-ext"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.8"

[profile.dev]
opt-level = 1

[profile.lto]
# A profile with various additional optimizations
inherits = "release"

# It isn't clear that lto makes anything faster yet
# But it does reduce the binary size. true = "fat", can also use "thin"
# This save a LOT of binary size.
lto = true

# Can't really tell if this changes anything
# This seems useless, at least in terms of file size.
# codegen-units = 1

# This causes it to not work on some machines?
# Saves about 1MB at the time of writing.
# Probably not good enough for not having the trace.
# panic = "abort"
