[package]
name = "nala"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/volian/nala/-/tree/nala-rs"
readme = "README.rst"
description = "Commandline frontend for the APT package manager"

[dependencies]
# rust-apt = { git = "https://gitlab.com/volian/rust-apt" }
rust-apt = { path = "../rust-apt" }
#rust-apt = "0.8.0"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
regex = "1.10"
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
indicatif = "0.17"
crossterm = "0.28"
sha2 = "0.10"
digest = "0.10"
chrono = "0.4"
ratatui = { version = "0.29", features = ["serde"] }
ansi-to-tui = "7"
nix = { version = "0.29.0", features = ["fs", "process", "term", "ioctl", "signal"] }
mio = { version = "1.0.1", features = ["os-ext"] }
bincode = "1.3"
comfy-table = { version = "7", features = ["tty", "custom_styling"] }
tar = "0.4"
ar = "0.9.0"
xz2 = { version = "0.1", features = ["tokio"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rust-apt = { path = "../rust-apt" }

[profile.release]
debug = true

[profile.lto]
# A profile with various additional optimizations
inherits = "release"

# It isn't clear that lto makes anything faster yet
# But it does reduce the binary size. true = "fat", can also use "thin"
# This save a LOT of binary size.
lto = true

# Can't really tell if this changes anything
# This seems useless, at least in terms of file size.
# codegen-units = 1

# This causes it to not work on some machines?
# Saves about 1MB at the time of writing.
# Probably not good enough for not having the trace.
# panic = "abort"
