[package]
name = "nala"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/volian/nala/-/tree/nala-rs"
readme = "README.rst"
description = "Commandline frontend for the APT package manager"

[dependencies]
# rust-apt = { git = "https://gitlab.com/volian/rust-apt" }
rust-apt = { path = "../rust-apt" }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
nix = { version = "0.29", features = ["fs", "process", "term", "ioctl", "signal"] }
async-compression = { version = "0.4", features = ["tokio", "all-algorithms"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
ratatui = { version = "0.29", features = ["serde"] }
comfy-table = { version = "7", features = ["tty", "custom_styling"] }
mio = { version = "1", features = ["os-ext"] }
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"
anyhow = "1"
regex = "1"
globset = "0.4"
serde_json = "1"
indicatif = "0.17"
crossterm = "0.28"
sha2 = "0.10"
digest = "0.10"
chrono = "0.4"
ansi-to-tui = "7"
bincode = "1"
tar = "0.4"
ar = "0.9"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap-markdown = "0.1"
clap_complete = { version = "4", features = ["unstable-dynamic"] }
clap_mangen = "0.2"

[profile.lto]
# A profile with various additional optimizations
inherits = "release"

# It isn't clear that lto makes anything faster yet
# But it does reduce the binary size. true = "fat", can also use "thin"
# This save a LOT of binary size.
lto = true

# Can't really tell if this changes anything
# This seems useless, at least in terms of file size.
# codegen-units = 1

# This causes it to not work on some machines?
# Saves about 1MB at the time of writing.
# Probably not good enough for not having the trace.
# panic = "abort"
